WIP make chat window 100% height

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
 {% extends "layout.html" %}
 
-{% block heading %}
-    Flack
-{% endblock %}
-
 {% block body %}
-    <div id="app">
+    <div id="app" class="container h-100">
         <cs50-app-component></cs50-app-component>
     </div>
 {% endblock %}
