--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,11 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="%% url_for('static', filename='css/bootstrap.min.css') %%">
     <style>
+        /* Sticky footer styles
+        -------------------------------------------------- */
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        body {
+            min-height: 100%;
+            height: 100%;
+        }
+
         mark {
             padding: 0;
         }
         svg > rect.vote-bar {
             transition: width 1s;
+        }
+        .chat-messages {
+            height: 100%;
+            overflow-y: scroll;
         }
     </style>
     <title>Project 2: Flack app</title>
@@ -19,11 +35,8 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('index') }}">Flack</a>
     </nav>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>{% block heading %}{% endblock %}</h1>
-
+    <div class="container h-100">
+        <div class="row h-100">
                 {% block body %}
                 {% endblock %}
             </div>
