Set container-fluid

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <div id="app" class="container h-100">
+    <div id="app" class="container-fluid h-100">
         <cs50-app-component></cs50-app-component>
     </div>
 {% endblock %}
