--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="{{ url_for('index') }}">Flack</a>
     </nav>
-    <div class="container h-100">
+    <div class="container-fluid h-100">
         <div class="row h-100">
                 {% block body %}
                 {% endblock %}
